--- a/weather/app/src/main/res/values/strings.xml
+++ b/weather/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">weather</string>
     <string name="try_again">Try Again</string>
+
+    <string name="no_description">no_description</string>
+    <string name="precipitation">Precipitation</string>
+    <string name="humidity">Humidity</string>
+    <string name="windSpeed">Wind Speed</string>
+    <string name="dayAndNight">Day and Night</string>
 </resources>
